--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body id="body" >
     <h1>Today's To Do List</h1>
-    <input id="text" type="text" placeholder="Enter here"> 
-    <input id="button" type="button" value="Enter">
+    <input id="text" type="text" placeholder="Enter text here"> 
+    <input id="enter" type="button" value="Enter">
     <ul id="list">
     </ul>
     <script type="text/javascript" src="script.js">
